now the score is calculated right

--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "glob": "latest",
     "grunt": "latest",
     "grunt-cli": "latest",
+    "gulp-wiredep": "latest",
     "helmet": "latest",
     "jasmine-core": "latest",
     "lodash": "latest",
     "lusca": "latest",
     "method-override": "latest",
-    "gulp-wiredep": "latest",
     "mocha": "latest",
     "mongoose": "latest",
     "morgan": "latest",
@@ -62,7 +62,7 @@
     "passport-twitter": "latest",
     "phantomjs-prebuilt": "latest",
     "serve-favicon": "latest",
-    "socket.io": "latest",
+    "socket.io": "^1.4.5",
     "swig": "latest",
     "validator": "latest"
   },
